[gd_scene load_steps=10 format=3 uid="uid://ctrkhblkf2qbn"]

[ext_resource type="Script" uid="uid://y3sug4xh2eiw" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="InputEventAction" id="InputEventAction_0xm2m"]
action = &"save"

[sub_resource type="Shortcut" id="Shortcut_h2yge"]
events = [SubResource("InputEventAction_0xm2m")]

[sub_resource type="InputEventAction" id="InputEventAction_1bvp3"]
action = &"save_as"

[sub_resource type="Shortcut" id="Shortcut_lquwl"]
events = [SubResource("InputEventAction_1bvp3")]

[sub_resource type="InputEventAction" id="InputEventAction_7mycd"]
action = &"open"

[sub_resource type="Shortcut" id="Shortcut_272bh"]
events = [SubResource("InputEventAction_7mycd")]

[sub_resource type="InputEventAction" id="InputEventAction_5vw27"]
action = &"themes_window"

[sub_resource type="Shortcut" id="Shortcut_kek77"]
events = [SubResource("InputEventAction_5vw27")]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_h2yge")
text = "Save"

[node name="SaveAsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_lquwl")
text = "Save As"

[node name="OpenButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_272bh")
text = "Open"

[node name="ThemeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_kek77")
text = "Change Theme
"

[node name="Editor" type="CodeEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true

[node name="SaveAsDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
display_mode = 1
access = 2
use_native_dialog = true

[node name="OpenDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
display_mode = 1
access = 2
use_native_dialog = true

[node name="ThemeDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
display_mode = 1
access = 2
filters = PackedStringArray("*.res")
use_native_dialog = true

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/ThemeButton" to="." method="_on_theme_button_pressed"]
[connection signal="file_selected" from="SaveAsDialog" to="." method="_on_save_as_dialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
[connection signal="file_selected" from="ThemeDialog" to="." method="_on_theme_dialog_file_selected"]
